--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
+    "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
