--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.9.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.16.0",
+    "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
@@ -24,7 +26,7 @@
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.22.0",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
