--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^5.0.43",
     "firebase": "^11.8.1",
     "framer-motion": "^12.16.0",
+    "lottie-react": "^2.4.1",
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
